# verigenx

./: .gitignore  CLIENT_MESSAGE.md  CLIENT_REPORT.html  CLIENT_REPORT_TRACEABILITY.html  CLIENT_REPORT_TRACEABILITY_i2c.html  CLIENT_REPORT_TRACEABILITY_spi.html  CLIENT_REPORT_WAVEFORM.html  LICENSE  Makefile  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE5_COMPLETION_REPORT.md  PHASE6_COMPLETION_REPORT.md  PHASE7_COMPLETION_REPORT.md  PROJECT_STATUS_COMPLETE.md  README.md  app.py  dag.dot  index.html  pyproject.toml  requirements.txt  test_phase1.py  test_phase2.py
.cache/: axi_lite_spec.cache.json  fifo_spec.cache.json  i2c_spec.cache.json  spi_spec.cache.json  test.cache.json  uart.cache.json  uart_spec.cache.json
.streamlit/: config.toml
VeriGenX/: __init__.py  config.py  orchestrator.py  state_bus.py
docker/: Dockerfile  docker-compose.yml
docs/: agent_api.md  architecture.md  archweaver_api.md  contributing.md  test_plan_schema.json  user_guide.md
generated_uvm/: axi_agent.sv  axi_coverage.sv  axi_driver.sv  axi_env.sv  axi_lite_coverage.sv  axi_lite_driver.sv  axi_lite_monitor.sv  axi_lite_scoreboard.sv  axi_lite_sequence.sv  axi_lite_sequence_item.sv  axi_lite_test_directed.sv  axi_monitor.sv  axi_sequence_item.sv  axi_test_base.sv  compile_report.json  fifo_coverage.sv  fifo_driver.sv  fifo_interface.sv  fifo_monitor.sv  fifo_scoreboard.sv  fifo_sequence_item.sv  i2c_coverage.sv  i2c_driver.sv  i2c_monitor.sv  i2c_scoreboard.sv  i2c_sequence_item.sv  i2c_test_directed_IDLE.sv  (+16 more)
(+174 files in other folders)
