[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verigenx"
version = "1.0.0"
description = "VeriGenX: Multi-Agent AI-Driven UVM Testbench Generator"
readme = "README.md"
authors = [{ name = "Faham94" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.1.0",
    "chromadb>=0.5.0",
    "pydantic>=2.7.0",
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "graphviz>=0.20.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
